radix-engine-tests/tests/dec_macros/src/pdec_err_empty_fractional_part_2.stderr
error: If there is a decimal point, the number must include at least one digit after it.
 --> src/pdec_err_empty_fractional_part_2.rs:4:29
  |
4 |     const X: Decimal = dec!("1.");
  |                             ^^^^
